# embodied-ai-portfolio

./: .gitignore  PORTFOLIO.md  README.md  demo_record.sh  ros2_env.sh  run_warehouse.sh  setup.sh
esp32_firmware/: README.md  esp32_firmware.ino  esp32_rod_car.ino
src/esp32_bridge/: package.xml  setup.py
src/esp32_bridge/esp32_bridge/: esp32_bridge.py
src/my_robot_bringup/: package.xml  setup.py
src/my_robot_bringup/my_robot_bringup/: robot_commander.py  robot_driver.py  task_sender.py  task_sender_ai.py  warehouse_robot.py  warehouse_robot_ai.py
