<?xml version="1.0"?>
<package format="3">
  <name>esp32_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 bridge to ESP32 ROD car via WiFi HTTP</description>
  <maintainer email="liver5274@gmail.com">Kirk</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
